# bestagon

./: .gitignore  .readsthedocs.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  diagram.drawio  pyproject.toml  requirements.txt  setup.py
bestagon/: component.py  exceptions.py  system.py  utils.py
bestagon/adapters/: aiosqlite_db.py  event_store.py  kurrent.py  neo4j_db.py  popo.py  repository.py  stored_event.py  subscription.py
bestagon/core/: aggregate.py  application.py  checkpoint_store.py  command_bus.py  event_converter.py  event_processor.py  event_store.py  exceptions.py  mapper.py  message.py  message_bus.py  policy.py  repository.py  signal.py  subscription.py  system.py
bestagon/domain/: aggregate.py  application.py  command.py  domain_event.py
docs/source/: conf.py  index.rst
docs/source/topics/: acknowledgments.rst  examples.rst  support.rst  tutorial.rst
docs/source/topics/examples/: aggregate.rst
docs/source/topics/examples/aggregates/: bond.rst
docs/source/topics/tutorial/: aggregate.rst  application.rst  launch_with_fast_api.rst  overview.rst  projection.rst  system.rst
examples/aggregate/: bond.py
