[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta

[project]
name = "bestagon"
version = "0.6.0"
authors = [
  {name="Aleksandr Antonov", email="antonov.o779@gmail.com"},
]
description = "DDD+ES+CQRS framework for python"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/rndmBot/bestagon"
Issues = "https://github.com/rndmBot/bestagon/issues"